--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="빈땅" />
+    <meta property="og:description" content="한동대학교 멋쟁이사자처럼" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -32,7 +30,7 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css"
     />
-    <title>Bin Ddang</title>
+    <title>빈땅</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
